# open_spiel

./: README.md  setup.py
.github/workflows/: wheels.yml
docs/: install.md
open_spiel/: CMakeLists.txt  spiel.cc  spiel.h
open_spiel/examples/: shared_library_example.cc
open_spiel/extensions/: CMakeLists.txt  algorithms.cc  algorithms.h  belief.h  global_variables.h  poker_methods.h  utils.h
open_spiel/games/: universal_poker.cc  universal_poker.h
open_spiel/games/universal_poker/acpc_cpp/: acpc_game.cc
open_spiel/python/examples/: example.py  poker_fcpa_example.py
open_spiel/python/pybind11/: pyspiel.cc
open_spiel/scripts/: global_variables.sh
